force-app/main/default/objects/Ticket_User__c/Ticket_User__c.object-meta.xml
<CustomObject>
    <label>Ticket User</label>
    <nameField>
        <label>User Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Ticket Users</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>