force-app/main/default/objects/Ticket_User__c/fields/Manager__c.field-meta.xml
<CustomField>
    <fullName>Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Manager</label>
    <referenceTo>Ticket_User__c</referenceTo>
    <relationshipLabel>Developers Or Managers</relationshipLabel>
    <relationshipName>DevelopersOrManagers</relationshipName>
    <type>Lookup</type>
</CustomField>