force-app/main/default/objects/Ticket_User__c/fields/Weekly_Working_Hours__c.field-meta.xml
<CustomField>
    <fullName>Weekly_Working_Hours__c</fullName>
    <label>Weekly Working Hours</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>